# security-application-registry

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  create_user.bat  engine.py  pyproject.toml  registry.xlsx  registry_big.xlsx  requirements.txt  run_sar.bat
data/: registry_template.xlsx  users.yml
sar/core/: utils.py
sar/infra/: registry_repo.py
sar/services/: compute_service.py  crud_service.py
scripts/: create_user.py
src/sar/: __main__.py  app.py  engine.py  permissions.py
src/sar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/sar/auth/: __init__.py  passwords.py  session.py  users.py
src/sar/core/: mapping.py
src/sar/infra/: registry_repo.py
src/sar/report_templates/: c4_chain_report.docx  c4_chain_report.html.j2
src/sar/services/: compute_service.py  crud_service.py  diagram_service.py  record_service.py  report_service.py
src/sar/templates/: add_field_confirm.html  base.html  create_confirm.html  create_form.html  index.html  issues.html  level_list.html  login.html  record.html  view_full.html
templates/: base.html  create_form.html  level_list.html  record.html  view_full.html
tests/: conftest.py  test_app_endpoints.py  test_diagram_service.py  test_engine_compute.py  test_report_service.py
