[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sar"
version = "0.1.0"
description = "Security Application Registry (SAR)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
  "fastapi",
  "uvicorn",
  "pandas",
  "openpyxl",
  "jinja2",
  "python-multipart"
]

[project.urls]
Homepage = "https://example.invalid/sar"

[project.scripts]
sar = "sar.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
